@@ -1,5 +1,11 @@
 2007-11-08  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+	  src/vpn-password-dialog.c
+		- Fix for removal of nm_settings_new_error()
+
+2007-11-08  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method-tls.c
 	  src/wireless-security/eap-method-ttls.c
 	  po/POTFILES.in
